# cute-vcv

./: Makefile  README.md  plugin.json
.github/workflows/: publish-vcvrack.yml
cores/mom_jeans/: mom_jeans_voice.c  mom_jeans_voice.h
cores/pulsar/: pulsar.c  pulsar_oscillator.c
metamodule/: CMakeLists.txt  plugin-mm.json
metamodule/metamodule-plugins/: CuteLab-v1.0.mmplugin  CuteLab-v1.1.mmplugin  cutelab.mmplugin
metamodule/src/: mom_jeans_core.cc  mom_jeans_info.hh
release-notes/: poly-cpu-optimization.md  v2.1.0.md
src/: mom-jeans.cpp  plugin.cpp
tests/: perf_regression.c  run_perf.sh  run_tests.sh  test_mom_jeans_voice.c
